--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
         </div>
         <div class="desktopApps" id="desktopApps">
             <div id="icon" style="text-align: center; padding: 16px; filter: drop-shadow(0 0 3px black); width: fit-content;">
-                <img src="assets/diary.png" alt="">
+                <img src="assets/diary.png" alt="" >
                 <p style="margin: 0px; color: #fff;">Notes</p>
+            </div>
+            <div id="filesicon" style="text-align: center; padding: 16px; filter: drop-shadow(0 0 3px black); width: fit-content; ">
+                <img src="assets/fileicon_prev_ui.png" alt="">
+                <p style="margin: 0px; color: #fff;">Files</p>
             </div>
         </div>
         <div class="window" id="window">
@@ -59,6 +63,88 @@
                     </div>
                     <div class="main" id="notescontent"style="overflow-y: scroll;">
                         
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="window" id="files" style="display: none;">
+            <div class="windowheader" id="windowheader">
+                <div style="width: 16px; margin-left: 6px; height: 16px;"></div>
+                <p style="margin: 0px; color: #fff; font-weight: 500;">File Explorer</p>
+                <div class="windowclose" id="filesclose">
+                    <p>X</p>
+                </div>
+            </div>
+            <div class="windowcontent" style="background-color: #fff;
+            margin: 6px;
+            border-radius: 12px;
+            padding: 12px;
+            width: 520px;">
+                <div class="filebar" style="background-color: #F9F9F9; width: 510px; margin-right: 10px; padding: 4px; border-radius: 16px; display: flex; flex-direction: row;">
+                    <img src="/assets/back.png" alt="" style="width: 16px; height: 16px; margin-top: 12px; margin-right: 12px; margin-left: 26px;">
+                    <img src="/assets/next.png" alt="" style="width: 16px; height: 16px; margin-top: 12px; margin-right: 72px;">
+                    <p style="font-weight: bold; font-family: monospace; font-size: 13px; margin-left: 20px;" >/home/projects/repositories</p>
+                </div>
+                <div class="wrapper" style="display: flex; flex-direction: row;">
+                    <div class="filesidebar" style="background-color: #F9F9F9; width: fit-content; margin-right: 16px; padding: 16px; border-radius: 16px; margin-top: 10px;">
+                        <p>Home</p>
+                        <p>Documents</p>
+                        <p>Photos</p>
+                        <p>Music</p>
+                    </div>
+                    <div class="repos" style="display: flex; flex-direction: column; justify-content: space-between; margin-top: 16px; margin-left: 10px;">
+                        <div class="reporow" style="display: flex; flex-direction: row; justify-content: space-evenly; margin-bottom: 10px;">
+                            <div class="repo">
+                                <a href="https://github.com/SidVer312/GravGenOS" target="_blank" style="text-decoration: none; color: black;">
+                                    <img style="width: 64px; height: 64px; border-radius: 12px; object-fit: cover;" src="assets/repos.png" />
+                                    <p style="margin: 0px;">GravGenOS</p>
+                                </a>
+                            </div>
+                            <div class="repo">
+                                <a href="https://github.com/SidVer312/FigaroCoin-Sepolia" target="_blank" style="text-decoration: none; color: black;">
+                                    <img style="width: 64px; height: 64px; border-radius: 12px; object-fit: cover;" src="assets/repos.png" />
+                                    <p style="margin: 0px;">FigaroCoin</p>
+                                </a>
+                            </div>
+                            <div class="repo">
+                                <a href="https://github.com/SidVer312/VisionHandTracking" target="_blank" style="text-decoration: none; color: black;">
+                                    <img style="width: 64px; height: 64px; border-radius: 12px; object-fit: cover;" src="assets/repos.png" />
+                                    <p style="margin: 0px;">HandTracking</p>
+                                </a>
+                            </div>
+                            <div class="repo">
+                                <a href="https://github.com/SidVer312/Py_Blockchain" target="_blank" style="text-decoration: none; color: black;">
+                                    <img style="width: 64px; height: 64px; border-radius: 12px; object-fit: cover;" src="assets/repos.png" />
+                                    <p style="margin: 0px;">PyBlockchain</p>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="reporow" style="display: flex; flex-direction: row; justify-content: space-evenly;">
+                            <div class="repo">
+                                <a href="https://github.com/SidVer312/whatcord" target="_blank" style="text-decoration: none; color: black;">
+                                    <img style="width: 64px; height: 64px; border-radius: 12px; object-fit: cover;" src="assets/repos.png" />
+                                    <p style="margin: 0px;">Whatcord</p>
+                                </a>
+                            </div>
+                            <div class="repo">
+                                <a href="https://github.com/SidVer312/SVWord" target="_blank" style="text-decoration: none; color: black;">
+                                    <img style="width: 64px; height: 64px; border-radius: 12px; object-fit: cover;" src="assets/repos.png" />
+                                    <p style="margin: 0px;">SVWord</p>
+                                </a>
+                            </div>
+                            <div class="repo">
+                                <a href="https://github.com/SidVer312/SVBrowser" target="_blank" style="text-decoration: none; color: black;">
+                                    <img style="width: 64px; height: 64px; border-radius: 12px; object-fit: cover;" src="assets/repos.png" />
+                                    <p style="margin: 0px;">SVBrowser</p>
+                                </a>
+                            </div>
+                            <div class="repo">
+                                <a href="https://github.com/SidVer312/Xino-x86-Benchmarker" target="_blank" style="text-decoration: none; color: black;">
+                                    <img style="width: 64px; height: 64px; border-radius: 12px; object-fit: cover;" src="assets/repos.png" />
+                                    <p style="margin: 0px;">x86-Benchmarker</p>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
