--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
         <title>Siddhartha Verma</title>
-        
+        <script>
+            if (/Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent)) {
+                window.location.href = "https://sidverma.tech";
+            }
+        </script>
     </head>
     <body>
         <div id="nav" class="nav">
@@ -25,6 +30,10 @@
                 <img src="assets/fileicon_prev_ui.png" alt="">
                 <p style="margin: 0px; color: #fff;">Files</p>
             </div>
+            <div id="resumeicon" style="text-align: center; padding: 16px; filter: drop-shadow(0 0 3px black); width: fit-content; ">
+                <img src="assets/res.png" alt="">
+                <p style="margin: 0px; color: #fff;">Download Resumé</p>
+            </div>
         </div>
         <div class="window" id="window">
             <div class="windowheader" id="windowheader">
@@ -40,7 +49,7 @@
                 <p>Welcome to GravGenOS! A glorious feature limited look into answering - What makes Siddhartha Verma's genius generate gravity? </p>
                 <p>Head over to the notes app learn more about me! (and if I have started it yet then you might also see my blog there)
                 </br>
-                </br>Interested in my projects? Head over to the settings app!
+                </br>Interested in my projects? Head over to the File Explorer!
                 </p>
                 <p>OSes not your thing? Click the middle button on the navbar to go the regular looking website.</p>
             </div>
