added new mobile view link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Siddhartha Verma</title>
         <script>
             if (/Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent)) {
-                window.location.href = "https://sidverma.tech";
+                window.location.href = "https://sidverma.tech/mobile-view";
             }
         </script>
     </head>
@@ -17,7 +17,7 @@
         <div id="nav" class="nav">
             <p class="topbar-title" id="windowopen" >GravGenOS</p>
             <div class="gravcontainer">
-                <a class="grav" href="https://sidverma.tech/regular-view">Switch to regular view</a>
+                <a class="grav" href="https://sidverma.tech/mobile-view">Switch to regular view</a>
             </div>
             <p class="topbar-time" id="timeElement">Time</p>
         </div>
