changed mobile view link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Siddhartha Verma</title>
         <script>
             if (/Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent)) {
-                window.location.href = "https://sidverma.tech/mobile-view";
+                window.location.href = "https://sidver312.github.io/mobile-view";
             }
         </script>
     </head>
